--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "standard-notes-editor-template-cra-typescript",
+  "name": "cream-editor",
   "version": "0.1.0",
-  "description": "Template for building editors for Standard Notes using Create React App and TypeScript",
+  "author": "Johnny Almonte <johnny@standardnotes.org>",
+  "description": "A lightweight WYSIWYG markdown editor, derivated from Milkdown editor",
   "keywords": [
     "Standard Notes",
     "Standard Notes Extensions"
@@ -10,10 +11,10 @@
   "license": "AGPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/standardnotes/editor-template-cra-typescript.git"
+    "url": "https://github.com/standardnotes/cream-editor.git"
   },
   "bugs": {
-    "url": "https://github.com/standardnotes/editor-template-cra-typescript/issues"
+    "url": "https://github.com/standardnotes/cream-editor/issues"
   },
   "sn": {
     "main": "build/index.html"
@@ -37,6 +38,22 @@
     "pretty": "prettier --write 'src/**/*.{html,css,scss,js,jsx,ts,tsx,json}' README.md"
   },
   "dependencies": {
+    "@babel/core": "^7.15.8",
+    "@fontsource/roboto": "^4.5.1",
+    "@milkdown/core": "^4.13.2",
+    "@milkdown/plugin-clipboard": "^4.13.2",
+    "@milkdown/plugin-emoji": "^4.13.2",
+    "@milkdown/plugin-history": "^4.13.2",
+    "@milkdown/plugin-listener": "^4.13.2",
+    "@milkdown/plugin-math": "^4.13.2",
+    "@milkdown/plugin-prism": "^4.13.2",
+    "@milkdown/plugin-slash": "^4.13.2",
+    "@milkdown/plugin-tooltip": "^4.13.2",
+    "@milkdown/preset-commonmark": "^4.13.2",
+    "@milkdown/preset-gfm": "^4.13.2",
+    "@milkdown/react": "^4.13.2",
+    "@milkdown/theme-nord": "^4.13.2",
+    "@standardnotes/editor-kit": "2.1.2",
     "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -50,14 +67,15 @@
     "filesafe-js": "^1.0.4",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
+    "katex": "^0.13.18",
     "lint-staged": "^10.5.3",
+    "material-icons": "^1.9.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "sn-editor-kit": "1.0.6",
-    "sn-stylekit": "2.1.0",
+    "react-scripts": "4.0.3",
+    "sn-stylekit": "5.2.8",
     "source-map-explorer": "^2.5.1",
     "typescript": "^4.1.3",
     "web-vitals": "^1.0.1"
