--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Editor Template",
-  "name": "Editor Template CRA TypeScript",
+  "short_name": "Cream Editor",
+  "name": "Cream Editor",
   "icons": [
     {
       "src": "favicon.ico",
