chore: rename to markdown-visual

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Cream Editor",
-  "name": "Cream Editor",
+  "short_name": "Markdown Visual",
+  "name": "Markdown Visual",
   "icons": [
     {
       "src": "favicon.ico",
