--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cream-editor",
+  "name": "markdown-visual",
   "version": "0.1.0",
   "author": "Johnny Almonte <johnny@standardnotes.org>",
   "description": "A lightweight WYSIWYG markdown editor, derivated from Milkdown editor",
@@ -11,10 +11,10 @@
   "license": "AGPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/standardnotes/cream-editor.git"
+    "url": "https://github.com/standardnotes/markdown-visual.git"
   },
   "bugs": {
-    "url": "https://github.com/standardnotes/cream-editor/issues"
+    "url": "https://github.com/standardnotes/markdown-visual/issues"
   },
   "sn": {
     "main": "build/index.html"
