--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "pretty": "prettier --write 'src/**/*.{html,css,scss,js,jsx,ts,tsx,json}' README.md"
   },
   "dependencies": {
-    "@babel/core": "^7.15.8",
-    "@codemirror/lang-markdown": "^0.19.1",
+    "@codemirror/lang-markdown": "^0.19.2",
     "@fontsource/roboto": "^4.5.1",
     "@milkdown/core": "^4.13.2",
     "@milkdown/plugin-clipboard": "^4.13.2",
@@ -74,13 +73,14 @@
     "material-icons": "^1.9.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "sn-stylekit": "5.2.8",
     "source-map-explorer": "^2.5.1",
-    "typescript": "^4.1.3",
+    "typescript": "4.1.2",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
