--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-visual",
+  "name": "@standardnotes/markdown-visual",
   "version": "0.1.0",
   "author": "Johnny Almonte <johnny@standardnotes.org>",
   "description": "A lightweight WYSIWYG markdown editor, derivated from Milkdown editor",
@@ -29,28 +29,35 @@
     "pretty": "prettier --write 'src/**/*.{html,css,scss,js,jsx,ts,tsx,json}' README.md"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.19.1",
     "@codemirror/lang-markdown": "^0.19.2",
     "@fontsource/roboto": "^4.5.1",
-    "@milkdown/core": "^4.13.2",
-    "@milkdown/plugin-clipboard": "^4.13.2",
-    "@milkdown/plugin-emoji": "^4.13.2",
-    "@milkdown/plugin-history": "^4.13.2",
-    "@milkdown/plugin-listener": "^4.13.2",
-    "@milkdown/plugin-math": "^4.13.2",
-    "@milkdown/plugin-prism": "^4.13.2",
-    "@milkdown/plugin-slash": "^4.13.2",
-    "@milkdown/plugin-tooltip": "^4.13.2",
-    "@milkdown/preset-commonmark": "^4.13.2",
-    "@milkdown/preset-gfm": "^4.13.2",
-    "@milkdown/react": "^4.13.2",
-    "@milkdown/theme-nord": "^4.13.2",
-    "@standardnotes/editor-kit": "2.1.2",
+    "@milkdown/core": "^5.5.0",
+    "@milkdown/plugin-clipboard": "^5.5.0",
+    "@milkdown/plugin-cursor": "^5.5.0",
+    "@milkdown/plugin-diagram": "^5.5.0",
+    "@milkdown/plugin-emoji": "^5.5.0",
+    "@milkdown/plugin-history": "^5.5.0",
+    "@milkdown/plugin-indent": "^5.5.0",
+    "@milkdown/plugin-listener": "^5.5.0",
+    "@milkdown/plugin-math": "^5.5.0",
+    "@milkdown/plugin-menu": "^5.5.0",
+    "@milkdown/plugin-prism": "^5.5.0",
+    "@milkdown/plugin-slash": "^5.5.0",
+    "@milkdown/plugin-tooltip": "^5.5.0",
+    "@milkdown/preset-commonmark": "^5.5.0",
+    "@milkdown/preset-gfm": "^5.5.0",
+    "@milkdown/prose": "^5.5.0",
+    "@milkdown/react": "^5.5.0",
+    "@milkdown/theme-nord": "^5.5.0",
+    "@standardnotes/editor-kit": "2.2.2",
     "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
     "@types/lodash": "^4.14.165",
+    "@types/marked": "^4.0.2",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -61,11 +68,11 @@
     "husky": "^4.3.6",
     "katex": "^0.13.18",
     "lint-staged": "^10.5.3",
+    "marked": "^4.0.12",
     "material-icons": "^1.9.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
@@ -104,5 +111,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   }
 }
