--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@standardnotes/markdown-visual",
   "version": "1.0.0",
-  "author": "Johnny Almonte <johnny@standardnotes.org>",
+  "author": "Johnny Almonte <johnny@standardnotes.com>",
   "description": "A lightweight WYSIWYG markdown editor, derivated from Milkdown editor",
   "keywords": [
     "Standard Notes",
