fix: make package public

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "sn": {
     "main": "build/index.html"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "homepage": ".",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
