--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@standardnotes/markdown-visual",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Johnny Almonte <johnny@standardnotes.com>",
   "description": "A lightweight WYSIWYG markdown editor, derivated from Milkdown editor",
   "keywords": [
@@ -31,7 +31,7 @@
     "eject": "react-scripts eject",
     "pretty": "prettier --write 'src/**/*.{html,css,scss,js,jsx,ts,tsx,json}' README.md"
   },
-  "dependencies": {
+  "devDependencies": {
     "@codemirror/basic-setup": "^0.19.1",
     "@codemirror/lang-markdown": "^0.19.2",
     "@fontsource/roboto": "^4.5.1",
