--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
-    "@uiw/react-codemirror": "4.5.1",
+    "@uiw/react-codemirror": "^4.5.1",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
     "katex": "^0.15.2",
@@ -74,7 +74,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "sass": "1.49.9",
     "sn-stylekit": "5.2.21",
     "source-map-explorer": "^2.5.2",
