--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@types/react-dom": "^17.0.13",
     "@uiw/react-codemirror": "^4.5.1",
     "gh-pages": "^3.2.3",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "katex": "^0.15.2",
     "lint-staged": "^12.3.5",
     "marked": "^4.0.12",
@@ -107,6 +107,6 @@
     ]
   },
   "resolutions": {
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "^6.0.10"
   }
 }
